# webis-dev

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  README_CN.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_imports.py  test_simple.py  webis_doc.md  webis_pipeline.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml  test.yml
benchmarks/: benchmark_pipeline.py
crawler/: agent.py  baidu_mcp_tool.py  ddg_scrapy_tool.py  github_api_tools.py  gnews_tool.py  hn_tool.py  semantic_scholar.py  serpapi_tool.py  tool_base.py
examples/: basic_pipeline.py  intelligence_radar.py  llm_pipeline.py  quick_app_demo.py  v2_demo.py
infra/terraform/: main.tf
k8s/: hpa.yaml
radar_data/code/: Flowise.html  agentic.html  agenticSeek.html
radar_data/news/: Shopping in 2026: AI is taking over my No. 1 hobby_72f669d0.html  The first agentic AI suite: A united front against mobile fr_ee2e6c8d.html  Traditional cyber defenses cannot match AI-powered threats_e3f4673b.html
setup/homebrew/: webis.rb
src/webis/: __init__.py  cli.py
src/webis/apps/: chat.py  monitor.py  visualizer.py
src/webis/core/: __init__.py  celery_app.py  config.py  pipeline.py  plugin.py  schema.py  worker.py
src/webis/core/agent/: planner.py
src/webis/core/execution/: distributed_executor.py
src/webis/core/extraction/: schema_inference.py
src/webis/core/fusion/: fusion_engine.py
src/webis/core/llm/: __init__.py  base.py  batcher.py  prompt_manager.py
src/webis/core/memory/: __init__.py  db.py  deduplication.py  graph_store.py  models.py  retriever.py  vector_store.py
src/webis/core/observability/: __init__.py  tracer.py
src/webis/core/pipeline/: checkpoint.py  debugger.py  stream.py
src/webis/core/quality/: confidence.py  human_loop.py  scorer.py  validator.py
src/webis/core/security/: audit.py  retention.py  sandbox.py  secrets.py
src/webis/core/utils/: errors.py  timeout.py
src/webis/plugin_sdk/: __init__.py  utils.py
src/webis/plugins/notifications/: dingtalk_plugin.py  (+1 more)
src/webis/registry/: compatibility.json  plugins.json
src/webis/sdk/: __init__.py  client.py
src/webis/server/: app.py
templates/plugin_template/: README.md  cookiecutter.json  pyproject.toml
templates/plugin_template/src/webis_plugin_{{cookiecutter.plugin_slug}}/: plugin.py
templates/plugin_template/tests/: test_plugin.py
tests/: conftest.py  test_core.py  test_plugins.py  test_schema.py
tests/load/: locustfile.py
tools/: file_processor.py  file_processor_with_output.py
tools/processors/: base_processor.py  document_processor.py  html_processor.py  image_processor.py  pdf_processor.py  text_processors.py
visualization/: visual.py
(+34 files in other folders)
